--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.16)
-project(debugduck)
+project(dedux)
 
 add_executable(${PROJECT_NAME}
   src/main.cpp
@@ -9,3 +9,5 @@ target_link_libraries(${PROJECT_NAME} PRIVATE )
 target_include_directories(${PROJECT_NAME} PRIVATE include)
 target_compile_features(${PROJECT_NAME} PRIVATE cxx_std_20)
 target_compile_options(${PROJECT_NAME} INTERFACE -Wextra -Wall -Wpedantic)
+
+file(COPY projects DESTINATION ${CMAKE_BINARY_DIR})
